RaA: Fix spacing at bottom of  panel.

--- a/src/packages/modules/reviews-awards-d6/css/reviews-awards-d6.scss
+++ b/src/packages/modules/reviews-awards-d6/css/reviews-awards-d6.scss
@@ -212,8 +212,9 @@ $maximumChildren: 20;
 
   .reviews {
     position: relative;
-    min-height: 236px;
+    min-height: 216px;
     margin: 16px 0 35px;
+    padding: 0 0 20px;
     overflow: hidden;
     background-color: $gray80;
 
